--- a/load_dims.ipynb
+++ b/load_dims.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-15 10:09:36,139][406539018:0078] : Creating bigquery client\n",
-      "[INFO ][2023-01-15 10:09:36,145][406539018:0081] : Setup Completed\n"
+      "[DEBUG][2023-01-20 10:37:49,643][110567641:0079] : Creating bigquery client\n",
+      "[INFO ][2023-01-20 10:37:49,661][110567641:0082] : Setup Completed\n"
      ]
     }
    ],
@@ -30,6 +30,7 @@
     "from google.cloud import bigquery\n",
     "from hashlib import md5\n",
     "from typing import List\n",
+    "import uuid\n",
     "\n",
     "\n",
     "# **** SETUP ****\n",
@@ -146,15 +147,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-15 10:09:47,838][2599063938:0004] : attempting to process: ./data/tickets.json\n",
-      "[INFO ][2023-01-15 10:09:48,364][2599063938:0017] : loaded 4096 rows from: ./data/tickets.json\n"
+      "[DEBUG][2023-01-20 10:53:25,365][2599063938:0004] : attempting to process: ./data/tickets.json\n",
+      "[INFO ][2023-01-20 10:53:25,841][2599063938:0017] : loaded 4096 rows from: ./data/tickets.json\n"
      ]
     },
     {
@@ -1106,15 +1107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-01-13 14:18:21,145][2564274586:0004] : getting unique aiports...\n",
-      "[INFO ][2023-01-13 14:18:21,316][2564274586:0015] : customers dim - found 386 rows\n"
+      "[DEBUG][2023-01-20 11:06:08,691][2393763477:0004] : getting unique aiports for origin...\n"
      ]
     },
     {
@@ -1141,79 +1141,74 @@
        "      <th>name</th>\n",
        "      <th>city</th>\n",
        "      <th>country</th>\n",
+       "      <th>iata</th>\n",
        "      <th>icao</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>altitude</th>\n",
        "      <th>tz_timezone</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>iata</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>AUH</th>\n",
-       "      <td>Abu Dhabi International Airport</td>\n",
-       "      <td>Abu Dhabi</td>\n",
-       "      <td>United Arab Emirates</td>\n",
-       "      <td>OMAA</td>\n",
-       "      <td>24.43</td>\n",
-       "      <td>54.65</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>Asia/Dubai</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Montreal / Pierre Elliott Trudeau Internationa...</td>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>YUL</td>\n",
+       "      <td>CYUL</td>\n",
+       "      <td>45.47</td>\n",
+       "      <td>-73.74</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>America/Toronto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MAD</th>\n",
-       "      <td>Adolfo Suárez Madrid–Barajas Airport</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>LEMD</td>\n",
-       "      <td>40.47</td>\n",
-       "      <td>-3.56</td>\n",
-       "      <td>1998.0</td>\n",
-       "      <td>Europe/Madrid</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Longdongbao Airport</td>\n",
+       "      <td>Guiyang</td>\n",
+       "      <td>China</td>\n",
+       "      <td>KWE</td>\n",
+       "      <td>ZUGY</td>\n",
+       "      <td>26.54</td>\n",
+       "      <td>106.80</td>\n",
+       "      <td>3736.0</td>\n",
+       "      <td>Asia/Shanghai</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CWB</th>\n",
-       "      <td>Afonso Pena Airport</td>\n",
-       "      <td>Curitiba</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>SBCT</td>\n",
-       "      <td>-25.53</td>\n",
-       "      <td>-49.18</td>\n",
-       "      <td>2988.0</td>\n",
-       "      <td>America/Sao_Paulo</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Licenciado Gustavo Díaz Ordaz International Ai...</td>\n",
+       "      <td>Puerto Vallarta</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>PVR</td>\n",
+       "      <td>MMPR</td>\n",
+       "      <td>20.68</td>\n",
+       "      <td>-105.25</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>America/Mexico_City</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MCP</th>\n",
-       "      <td>Alberto Alcolumbre Airport</td>\n",
-       "      <td>Macapa</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>SBMQ</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>-51.07</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>America/Fortaleza</td>\n",
+       "      <th>3</th>\n",
+       "      <td>El Tepual Airport</td>\n",
+       "      <td>Puerto Montt</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>PMC</td>\n",
+       "      <td>SCTE</td>\n",
+       "      <td>-41.44</td>\n",
+       "      <td>-73.09</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>America/Santiago</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ABQ</th>\n",
-       "      <td>Albuquerque International Sunport</td>\n",
-       "      <td>Albuquerque</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Baltimore/Washington International Thurgood Ma...</td>\n",
+       "      <td>Baltimore</td>\n",
        "      <td>United States</td>\n",
-       "      <td>KABQ</td>\n",
-       "      <td>35.04</td>\n",
-       "      <td>-106.61</td>\n",
-       "      <td>5355.0</td>\n",
-       "      <td>America/Denver</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>KBWI</td>\n",
+       "      <td>39.18</td>\n",
+       "      <td>-76.67</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>America/New_York</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1225,111 +1220,114 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ZUH</th>\n",
-       "      <td>Zhuhai Jinwan Airport</td>\n",
-       "      <td>Zhuhai</td>\n",
-       "      <td>China</td>\n",
-       "      <td>ZGSD</td>\n",
-       "      <td>22.01</td>\n",
-       "      <td>113.38</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>Asia/Shanghai</td>\n",
+       "      <th>4091</th>\n",
+       "      <td>Don Mueang International Airport</td>\n",
+       "      <td>Bangkok</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>DMK</td>\n",
+       "      <td>VTBD</td>\n",
+       "      <td>13.91</td>\n",
+       "      <td>100.61</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Asia/Bangkok</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MCZ</th>\n",
-       "      <td>Zumbi dos Palmares Airport</td>\n",
-       "      <td>Maceio</td>\n",
+       "      <th>4092</th>\n",
+       "      <td>Governador Aluízio Alves International Airport</td>\n",
+       "      <td>Natal</td>\n",
        "      <td>Brazil</td>\n",
-       "      <td>SBMO</td>\n",
-       "      <td>-9.51</td>\n",
-       "      <td>-35.79</td>\n",
-       "      <td>387.0</td>\n",
+       "      <td>NAT</td>\n",
+       "      <td>SBSG</td>\n",
+       "      <td>-5.77</td>\n",
+       "      <td>-35.38</td>\n",
+       "      <td>272.0</td>\n",
        "      <td>America/Fortaleza</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ZRH</th>\n",
-       "      <td>Zürich Airport</td>\n",
-       "      <td>Zurich</td>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>LSZH</td>\n",
-       "      <td>47.46</td>\n",
-       "      <td>8.55</td>\n",
-       "      <td>1416.0</td>\n",
-       "      <td>Europe/Zurich</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MDQ</th>\n",
-       "      <td>Ástor Piazzola International Airport</td>\n",
-       "      <td>Mar Del Plata</td>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>SAZM</td>\n",
-       "      <td>-37.93</td>\n",
-       "      <td>-57.57</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>America/Buenos_Aires</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>URC</th>\n",
-       "      <td>Ürümqi Diwopu International Airport</td>\n",
-       "      <td>Urumqi</td>\n",
+       "      <th>4093</th>\n",
+       "      <td>Taiyuan Wusu Airport</td>\n",
+       "      <td>Taiyuan</td>\n",
        "      <td>China</td>\n",
-       "      <td>ZWWW</td>\n",
-       "      <td>43.91</td>\n",
-       "      <td>87.47</td>\n",
-       "      <td>2125.0</td>\n",
+       "      <td>TYN</td>\n",
+       "      <td>ZBYN</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>112.63</td>\n",
+       "      <td>2575.0</td>\n",
        "      <td>Asia/Shanghai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4094</th>\n",
+       "      <td>San Carlos De Bariloche Airport</td>\n",
+       "      <td>San Carlos De Bariloche</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>BRC</td>\n",
+       "      <td>SAZS</td>\n",
+       "      <td>-41.15</td>\n",
+       "      <td>-71.16</td>\n",
+       "      <td>2774.0</td>\n",
+       "      <td>America/Argentina/Salta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4095</th>\n",
+       "      <td>Mineralnyye Vody Airport</td>\n",
+       "      <td>Mineralnye Vody</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>MRV</td>\n",
+       "      <td>URMM</td>\n",
+       "      <td>44.23</td>\n",
+       "      <td>43.08</td>\n",
+       "      <td>1054.0</td>\n",
+       "      <td>Europe/Moscow</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>386 rows × 8 columns</p>\n",
+       "<p>4096 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      name           city  \\\n",
-       "iata                                                        \n",
-       "AUH        Abu Dhabi International Airport      Abu Dhabi   \n",
-       "MAD   Adolfo Suárez Madrid–Barajas Airport         Madrid   \n",
-       "CWB                    Afonso Pena Airport       Curitiba   \n",
-       "MCP             Alberto Alcolumbre Airport         Macapa   \n",
-       "ABQ      Albuquerque International Sunport    Albuquerque   \n",
-       "...                                    ...            ...   \n",
-       "ZUH                  Zhuhai Jinwan Airport         Zhuhai   \n",
-       "MCZ             Zumbi dos Palmares Airport         Maceio   \n",
-       "ZRH                         Zürich Airport         Zurich   \n",
-       "MDQ   Ástor Piazzola International Airport  Mar Del Plata   \n",
-       "URC    Ürümqi Diwopu International Airport         Urumqi   \n",
+       "                                                   name  \\\n",
+       "0     Montreal / Pierre Elliott Trudeau Internationa...   \n",
+       "1                                   Longdongbao Airport   \n",
+       "2     Licenciado Gustavo Díaz Ordaz International Ai...   \n",
+       "3                                     El Tepual Airport   \n",
+       "4     Baltimore/Washington International Thurgood Ma...   \n",
+       "...                                                 ...   \n",
+       "4091                   Don Mueang International Airport   \n",
+       "4092     Governador Aluízio Alves International Airport   \n",
+       "4093                               Taiyuan Wusu Airport   \n",
+       "4094                    San Carlos De Bariloche Airport   \n",
+       "4095                           Mineralnyye Vody Airport   \n",
        "\n",
-       "                   country  icao  latitude  longitude  altitude  \\\n",
-       "iata                                                              \n",
-       "AUH   United Arab Emirates  OMAA     24.43      54.65      88.0   \n",
-       "MAD                  Spain  LEMD     40.47      -3.56    1998.0   \n",
-       "CWB                 Brazil  SBCT    -25.53     -49.18    2988.0   \n",
-       "MCP                 Brazil  SBMQ      0.05     -51.07      56.0   \n",
-       "ABQ          United States  KABQ     35.04    -106.61    5355.0   \n",
-       "...                    ...   ...       ...        ...       ...   \n",
-       "ZUH                  China  ZGSD     22.01     113.38      23.0   \n",
-       "MCZ                 Brazil  SBMO     -9.51     -35.79     387.0   \n",
-       "ZRH            Switzerland  LSZH     47.46       8.55    1416.0   \n",
-       "MDQ              Argentina  SAZM    -37.93     -57.57      72.0   \n",
-       "URC                  China  ZWWW     43.91      87.47    2125.0   \n",
+       "                         city        country iata  icao  latitude  longitude  \\\n",
+       "0                    Montreal         Canada  YUL  CYUL     45.47     -73.74   \n",
+       "1                     Guiyang          China  KWE  ZUGY     26.54     106.80   \n",
+       "2             Puerto Vallarta         Mexico  PVR  MMPR     20.68    -105.25   \n",
+       "3                Puerto Montt          Chile  PMC  SCTE    -41.44     -73.09   \n",
+       "4                   Baltimore  United States  BWI  KBWI     39.18     -76.67   \n",
+       "...                       ...            ...  ...   ...       ...        ...   \n",
+       "4091                  Bangkok       Thailand  DMK  VTBD     13.91     100.61   \n",
+       "4092                    Natal         Brazil  NAT  SBSG     -5.77     -35.38   \n",
+       "4093                  Taiyuan          China  TYN  ZBYN     37.75     112.63   \n",
+       "4094  San Carlos De Bariloche      Argentina  BRC  SAZS    -41.15     -71.16   \n",
+       "4095          Mineralnye Vody         Russia  MRV  URMM     44.23      43.08   \n",
        "\n",
-       "               tz_timezone  \n",
-       "iata                        \n",
-       "AUH             Asia/Dubai  \n",
-       "MAD          Europe/Madrid  \n",
-       "CWB      America/Sao_Paulo  \n",
-       "MCP      America/Fortaleza  \n",
-       "ABQ         America/Denver  \n",
-       "...                    ...  \n",
-       "ZUH          Asia/Shanghai  \n",
-       "MCZ      America/Fortaleza  \n",
-       "ZRH          Europe/Zurich  \n",
-       "MDQ   America/Buenos_Aires  \n",
-       "URC          Asia/Shanghai  \n",
+       "      altitude              tz_timezone  \n",
+       "0        118.0          America/Toronto  \n",
+       "1       3736.0            Asia/Shanghai  \n",
+       "2         23.0      America/Mexico_City  \n",
+       "3        294.0         America/Santiago  \n",
+       "4        146.0         America/New_York  \n",
+       "...        ...                      ...  \n",
+       "4091       9.0             Asia/Bangkok  \n",
+       "4092     272.0        America/Fortaleza  \n",
+       "4093    2575.0            Asia/Shanghai  \n",
+       "4094    2774.0  America/Argentina/Salta  \n",
+       "4095    1054.0            Europe/Moscow  \n",
        "\n",
-       "[386 rows x 8 columns]"
+       "[4096 rows x 9 columns]"
       ]
      },
      "metadata": {},
@@ -1340,20 +1338,39 @@
     "# start from the tickets\n",
     "df = tickets_df\n",
     "\n",
-    "logger.debug(f\"getting unique aiports...\")\n",
+    "#create origin_df\n",
+    "logger.debug(f\"getting unique aiports for origin...\")\n",
     "\n",
-    "airports_cols = ['origin.name', 'origin.city', 'origin.country', 'origin.iata', 'origin.icao', 'origin.latitude', 'origin.longitude', 'origin.altitude', 'origin.tz_timezone']\n",
+    "origin_cols = ['origin.name', 'origin.city', 'origin.country', 'origin.iata', 'origin.icao', 'origin.latitude', 'origin.longitude', 'origin.altitude', 'origin.tz_timezone']\n",
+    "origin_df = df.groupby(origin_cols).all()\n",
+    "origin_df = df.reset_index().loc[:, origin_cols]\n",
     "\n",
-    "# get unique airports and only selecy them\n",
-    "df = df.groupby(airports_cols).all()\n",
-    "df = df.reset_index().loc[:, airports_cols]\n",
+    "#rename for origin_df columns\n",
+    "origin_df = origin_df.rename(columns={'origin.name': 'name', \n",
+    "                        'origin.city': 'city', \n",
+    "                        'origin.country': 'country', \n",
+    "                        'origin.iata': 'iata', \n",
+    "                        'origin.icao': 'icao', \n",
+    "                        'origin.latitude': 'latitude', \n",
+    "                        'origin.longitude': 'longitude', \n",
+    "                        'origin.altitude': 'altitude', \n",
+    "                        'origin.tz_timezone': 'tz_timezone'})\n",
     "\n",
-    "#rename columns\n",
-    "df = df.rename(columns={'origin.name': 'name', 'origin.city': 'city', 'origin.country': 'country', 'origin.iata': 'iata', 'origin.icao': 'icao', 'origin.latitude': 'latitude', 'origin.longitude': 'longitude', 'origin.altitude': 'altitude', 'origin.tz_timezone': 'tz_timezone'})\n",
-    "df = df.set_index(keys='iata')\n",
-    "logger.info(f\"customers dim - found {len(df.index)} rows\")\n",
+    "# airports_cols = ['origin.name', 'origin.city', 'origin.country', 'origin.iata', 'origin.icao', 'origin.latitude', 'origin.longitude', 'origin.altitude', 'origin.tz_timezone', \n",
+    "#                   'destination.name', 'destination.city', 'destination.country', 'destination.iata', 'destination.icao', 'destination.latitude', 'destination.longitude', 'destination.altitude', 'destination.tz_timezone']\n",
     "\n",
-    "display(df)"
+    "# # # get unique airports and only select them\n",
+    "# df = df.groupby(airports_cols).all()\n",
+    "# df = df.reset_index().loc[:, airports_cols]\n",
+    "\n",
+    "# #rename columns\n",
+    "# df = df.rename(columns={'origin.name': 'name', 'origin.city': 'city', 'origin.country': 'country', 'origin.iata': 'iata', 'origin.icao': 'icao', 'origin.latitude': 'latitude', 'origin.longitude': 'longitude', 'origin.altitude': 'altitude', 'origin.tz_timezone': 'tz_timezone',\n",
+    "#                        'destination.name': 'name', 'destination.city': 'city', 'destination.country': 'country', 'destination.iata': 'iata', 'destination.icao': 'icao', 'destination.latitude': 'latitude', 'destination.longitude': 'longitude', 'destination.altitude': 'altitude', 'destination.tz_timezone': 'tz_timezone'})\n",
+    "\n",
+    "# df = df.set_index(keys='iata')\n",
+    "# logger.info(f\"customers dim - found {len(df.index)} rows\")\n",
+    "\n",
+    "display(origin_df)"
    ]
   },
   {
